infrastructure/kyverno/resources/policies/enforce-apparmor.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: apparmor
spec:
  background: false
  rules:
    - name: app-armor
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
      validate:
        failureAction: Enforce
        message: AppArmor must not be Unconfined. The annotation container.apparmor.security.beta.kubernetes.io and the field securityContext.appArmorProfile.type must be unset, runtime/default/RuntimeDefault, or localhost/*/Localhost.
        pattern:
          =(metadata):
            =(annotations):
              =(container.apparmor.security.beta.kubernetes.io/*): runtime/default | localhost/*
          spec:
            =(securityContext):
              =(appArmorProfile):
                =(type): RuntimeDefault | Localhost
            =(ephemeralContainers):
              - =(securityContext):
                  =(appArmorProfile):
                    =(type): RuntimeDefault | Localhost
            =(initContainers):
              - =(securityContext):
                  =(appArmorProfile):
                    =(type): RuntimeDefault | Localhost
            containers:
              - =(securityContext):
                  =(appArmorProfile):
                    =(type): RuntimeDefault | Localhost
