infrastructure/kyverno/resources/policies/enforce-cri-socket-mounts.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cri-socket-mounts
spec:
  rules:
    - name: validate-docker-sock-mount
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
                - aredn
                - aredn-dmrhub
                - aredn-ntp
                - aredn-piaware
                - aredn-scanner
                - wireguard
                - path-of-titans
      validate:
        failureAction: Enforce
        message: Use of the Docker Unix socket is not allowed.
        pattern:
          spec:
            =(volumes):
              - =(hostPath):
                  path: '!/var/run/docker.sock'
    - name: validate-containerd-sock-mount
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
                - aredn
                - aredn-dmrhub
                - aredn-ntp
                - aredn-piaware
                - aredn-scanner
                - wireguard
                - path-of-titans
      validate:
        failureAction: Enforce
        message: Use of the Containerd Unix socket is not allowed.
        pattern:
          spec:
            =(volumes):
              - =(hostPath):
                  path: '!/var/run/containerd/containerd.sock'
    - name: validate-crio-sock-mount
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
                - aredn
                - aredn-dmrhub
                - aredn-ntp
                - aredn-piaware
                - aredn-scanner
                - wireguard
                - path-of-titans
      validate:
        failureAction: Enforce
        message: Use of the CRI-O Unix socket is not allowed.
        pattern:
          spec:
            =(volumes):
              - =(hostPath):
                  path: '!/var/run/crio/crio.sock'
    - name: validate-dockerd-sock-mount
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
                - aredn
                - aredn-dmrhub
                - aredn-ntp
                - aredn-piaware
                - aredn-scanner
                - wireguard
                - path-of-titans
      validate:
        failureAction: Enforce
        message: Use of the Docker CRI socket is not allowed.
        pattern:
          spec:
            =(volumes):
              - =(hostPath):
                  path: '!/var/run/cri-dockerd.sock'
