infrastructure/kyverno/resources/policies/enforce-host-path.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: host-path
spec:
  background: false
  rules:
    - name: host-path
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
          - resources:
              kinds:
                - Pod
              namespaces:
                - monitoring
              selector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - prometheus-node-exporter
                      - alloy
                      - talos-logs
      validate:
        failureAction: Enforce
        message: HostPath volumes are forbidden. The field spec.volumes[*].hostPath must be unset.
        pattern:
          spec:
            =(volumes):
              - X(hostPath): 'null'
