infrastructure/kyverno/resources/policies/enforce-host-ports.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: host-ports
spec:
  background: false
  rules:
    - name: host-ports-none
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
                - aredn
                - aredn-dmrhub
                - aredn-ntp
                - aredn-piaware
                - aredn-scanner
                - wireguard
                - path-of-titans
          - resources:
              kinds:
                - Pod
              namespaces:
                - monitoring
              selector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - prometheus-node-exporter
                      - alloy
                      - talos-logs
      validate:
        failureAction: Enforce
        message: Use of host ports is disallowed. The fields spec.containers[*].ports[*].hostPort , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort must either be unset or set to `0`.
        pattern:
          spec:
            =(ephemeralContainers):
              - =(ports):
                  - =(hostPort): 0
            =(initContainers):
              - =(ports):
                  - =(hostPort): 0
            containers:
              - =(ports):
                  - =(hostPort): 0
