infrastructure/kyverno/resources/policies/enforce-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: privilege-escalation
spec:
  rules:
  - name: check-privilegeEscalation
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Audit
      message: >-
        Privilege escalation is disallowed. The fields
        spec.containers[*].securityContext.allowPrivilegeEscalation,
        spec.initContainers[*].securityContext.allowPrivilegeEscalation,
        and spec.ephemeralContainers[*].securityContext.allowPrivilegeEscalation
        must be set to `false`.
      pattern:
        spec:
          =(ephemeralContainers):
          - securityContext:
              allowPrivilegeEscalation: false
          =(initContainers):
          - securityContext:
              allowPrivilegeEscalation: false
          containers:
          - securityContext:
              allowPrivilegeEscalation: false
