infrastructure/kyverno/resources/policies/enforce-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: privileged-containers
spec:
  background: false
  rules:
    - name: privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
                - aredn
                - aredn-dmrhub
                - aredn-ntp
                - aredn-piaware
                - aredn-scanner
                - wireguard
                - path-of-titans
      validate:
        failureAction: Enforce
        message: Privileged mode is disallowed. The fields spec.containers[*].securityContext.privileged, spec.initContainers[*].securityContext.privileged, and spec.ephemeralContainers[*].securityContext.privileged must be unset or set to `false`.
        pattern:
          spec:
            =(ephemeralContainers):
              - =(securityContext):
                  =(privileged): 'false'
            =(initContainers):
              - =(securityContext):
                  =(privileged): 'false'
            containers:
              - =(securityContext):
                  =(privileged): 'false'
