infrastructure/kyverno/resources/policies/enforce-sysctls.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sysctls
spec:
  background: false
  rules:
    - name: check-sysctls
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
                - aredn
                - aredn-dmrhub
                - aredn-ntp
                - aredn-piaware
                - aredn-scanner
                - wireguard
                - path-of-titans
                - prowlarr
                - camo
                - radarr
                - sonarr
                - sonarr-anime
                - qbittorrent
      validate:
        failureAction: Enforce
        message: 'Setting sysctls other than the safe set is disallowed. Allowed: kernel.shm_rmid_forced, net.ipv4.ip_local_port_range, net.ipv4.ip_unprivileged_port_start, net.ipv4.tcp_syncookies, net.ipv4.ping_group_range, net.ipv4.ip_local_reserved_ports, net.ipv4.tcp_keepalive_time, net.ipv4.tcp_fin_timeout, net.ipv4.tcp_keepalive_intvl, net.ipv4.tcp_keepalive_probes, net.ipv4.tcp_rmem, net.ipv4.tcp_wmem.'
        pattern:
          spec:
            =(securityContext):
              =(sysctls):
                - =(name): kernel.shm_rmid_forced | net.ipv4.ip_local_port_range | net.ipv4.ip_unprivileged_port_start | net.ipv4.tcp_syncookies | net.ipv4.ping_group_range | net.ipv4.ip_local_reserved_ports | net.ipv4.tcp_keepalive_time | net.ipv4.tcp_fin_timeout | net.ipv4.tcp_keepalive_intvl | net.ipv4.tcp_keepalive_probes | net.ipv4.tcp_rmem | net.ipv4.tcp_wmem
    - name: check-sysctls-wireguard
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - prowlarr
                - camo
                - radarr
                - sonarr
                - sonarr-anime
                - qbittorrent
                - path-of-titans
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
      validate:
        failureAction: Enforce
        message: 'Setting sysctls other than the safe set is disallowed. Allowed: kernel.shm_rmid_forced, net.ipv4.ip_local_port_range, net.ipv4.ip_unprivileged_port_start, net.ipv4.tcp_syncookies, net.ipv4.ping_group_range, net.ipv4.ip_local_reserved_ports, net.ipv4.tcp_keepalive_time, net.ipv4.tcp_fin_timeout, net.ipv4.tcp_keepalive_intvl, net.ipv4.tcp_keepalive_probes, net.ipv4.tcp_rmem, net.ipv4.tcp_wmem, net.ipv4.conf.all.src_valid_mark.'
        pattern:
          spec:
            =(securityContext):
              =(sysctls):
                - =(name): kernel.shm_rmid_forced | net.ipv4.ip_local_port_range | net.ipv4.ip_unprivileged_port_start | net.ipv4.tcp_syncookies | net.ipv4.ping_group_range | net.ipv4.ip_local_reserved_ports | net.ipv4.tcp_keepalive_time | net.ipv4.tcp_fin_timeout | net.ipv4.tcp_keepalive_intvl | net.ipv4.tcp_keepalive_probes | net.ipv4.tcp_rmem | net.ipv4.tcp_wmem | net.ipv4.conf.all.src_valid_mark
    - name: check-sysctls-router
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - aredn
                - aredn-dmrhub
                - aredn-ntp
                - aredn-piaware
                - aredn-scanner
                - wireguard
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - longhorn-system
                - gpu-operator
                - device-plugin
                - intel-device-plugin
                - node-feature-discovery
                - metallb-system
                - smartctl-exporter
                - tailscale-operator
                - frigate
      validate:
        failureAction: Enforce
        message: 'Setting sysctls other than the safe set is disallowed. Allowed: kernel.shm_rmid_forced, net.ipv4.ip_local_port_range, net.ipv4.ip_unprivileged_port_start, net.ipv4.tcp_syncookies, net.ipv4.ping_group_range, net.ipv4.ip_local_reserved_ports, net.ipv4.tcp_keepalive_time, net.ipv4.tcp_fin_timeout, net.ipv4.tcp_keepalive_intvl, net.ipv4.tcp_keepalive_probes, net.ipv4.tcp_rmem, net.ipv4.tcp_wmem, net.ipv4.conf.all.src_valid_mark, net.ipv4.ip_forward, net.ipv6.conf.all.forwarding.'
        pattern:
          spec:
            =(securityContext):
              =(sysctls):
                - =(name): kernel.shm_rmid_forced | net.ipv4.ip_local_port_range | net.ipv4.ip_unprivileged_port_start | net.ipv4.tcp_syncookies | net.ipv4.ping_group_range | net.ipv4.ip_local_reserved_ports | net.ipv4.tcp_keepalive_time | net.ipv4.tcp_fin_timeout | net.ipv4.tcp_keepalive_intvl | net.ipv4.tcp_keepalive_probes | net.ipv4.tcp_rmem | net.ipv4.tcp_wmem | net.ipv4.conf.all.src_valid_mark | net.ipv4.ip_forward | net.ipv6.conf.all.forwarding
